centjes-gen/test_resources/balance/error/as-is/BE_OFF_BALANCE-two-currencies.cent
currency USD 0.01
currency EUR 0.01

account assets
account income

2023-11-24
  * assets +1 USD
  * income -1 EUR
